--- a/app/src/main/res/layout/activity_video_player.xml
+++ b/app/src/main/res/layout/activity_video_player.xml
@@ -20,7 +20,7 @@
             android:layout_height="wrap_content">
 
             <TextView
-                android:id="@+id/tv_player_activity_movie_title"
+                android:id="@+id/tv_player_activity_movie_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/app_10dp"
@@ -35,10 +35,10 @@
                 android:layout_height="@dimen/app_30dp"
                 android:layout_alignParentRight="true"
                 android:layout_marginRight="@dimen/app_10dp"
-                android:background="@color/red_switcher_foreground"/>
+                android:background="@color/blue_E0F0FF"/>
 
             <TextView
-                android:layout_below="@+id/tv_player_activity_movie_title"
+                android:layout_below="@+id/tv_player_activity_movie_name"
                 android:layout_marginTop="@dimen/app_20dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -48,8 +48,8 @@
                 android:text="年份:"/>
 
             <TextView
-                android:id="@+id/tv_player_activity_movie_year"
-                android:layout_below="@+id/tv_player_activity_movie_title"
+                android:id="@+id/tv_player_activity_movie_publish_date"
+                android:layout_below="@+id/tv_player_activity_movie_name"
                 android:layout_marginTop="@dimen/app_20dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -58,7 +58,7 @@
                 android:text="xxxx年"/>
 
             <TextView
-                android:layout_below="@+id/tv_player_activity_movie_title"
+                android:layout_below="@+id/tv_player_activity_movie_name"
                 android:layout_marginTop="@dimen/app_20dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -70,7 +70,7 @@
 
 
             <TextView
-                android:layout_below="@+id/tv_player_activity_movie_title"
+                android:layout_below="@+id/tv_player_activity_movie_name"
                 android:layout_marginTop="@dimen/app_20dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -82,7 +82,7 @@
 
 
             <TextView
-                android:layout_below="@+id/tv_player_activity_movie_title"
+                android:layout_below="@+id/tv_player_activity_movie_name"
                 android:layout_marginTop="@dimen/app_60dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -93,8 +93,8 @@
                 android:text="主演："/>
 
             <TextView
-                android:id="@+id/tv_player_activity_movie_actor"
-                android:layout_below="@+id/tv_player_activity_movie_title"
+                android:id="@+id/tv_player_activity_movie_actors"
+                android:layout_below="@+id/tv_player_activity_movie_name"
                 android:layout_marginTop="@dimen/app_60dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -104,7 +104,7 @@
                 android:text="瑞秋·麦克亚当斯，娜塔莉·波特曼"/>
 
             <TextView
-                android:layout_below="@+id/tv_player_activity_movie_title"
+                android:layout_below="@+id/tv_player_activity_movie_name"
                 android:layout_marginTop="@dimen/app_100dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -121,7 +121,7 @@
                 android:textSize="@dimen/app_font_size_18"
                 android:layout_marginLeft="@dimen/app_10dp"
                 android:layout_marginRight="@dimen/app_10dp"
-                android:layout_below="@id/tv_player_activity_movie_title"
+                android:layout_below="@id/tv_player_activity_movie_name"
                 android:layout_marginTop="@dimen/app_130dp"
                 android:text="哈哈哈哈哈哈哈哈哈哈哈哈哈\n哈哈哈哈/n哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈"/>
 
