--- a/app/src/main/res/layout/tab_layout_hot_point_fragment.xml
+++ b/app/src/main/res/layout/tab_layout_hot_point_fragment.xml
@@ -59,14 +59,13 @@
 
             <ImageView
                 android:id="@+id/movie1"
-                android:layout_weight="1"
+                android:layout_width="@dimen/app_120dp"
+                android:layout_height="@dimen/app_135dp"
                 android:layout_marginLeft="@dimen/app_10dp"
                 android:layout_marginRight="@dimen/app_10dp"
-                android:layout_width="@dimen/app_120dp"
-                android:layout_height="@dimen/app_145dp"
+                android:layout_weight="1"
                 android:background="@color/blue_4ea0e5"
-                android:scaleType="fitXY"
-                />
+                android:scaleType="fitXY" />
 
             <ImageView
                 android:id="@+id/movie2"
@@ -74,7 +73,7 @@
                 android:layout_marginLeft="@dimen/app_10dp"
                 android:layout_marginRight="@dimen/app_10dp"
                 android:layout_width="@dimen/app_120dp"
-                android:layout_height="@dimen/app_145dp"
+                android:layout_height="@dimen/app_135dp"
                 android:background="@color/blue_4ea0e5"
                 android:scaleType="fitXY"/>
             <ImageView
@@ -83,7 +82,7 @@
                 android:layout_marginLeft="@dimen/app_10dp"
                 android:layout_marginRight="@dimen/app_10dp"
                 android:layout_width="@dimen/app_120dp"
-                android:layout_height="@dimen/app_145dp"
+                android:layout_height="@dimen/app_135dp"
                 android:background="@color/blue_4ea0e5"
                 android:scaleType="fitXY"/>
 
@@ -167,7 +166,7 @@
             <ImageView
                 android:id="@+id/movie4"
                 android:layout_width="@dimen/app_120dp"
-                android:layout_height="@dimen/app_145dp"
+                android:layout_height="@dimen/app_135dp"
                 android:layout_marginLeft="@dimen/app_10dp"
                 android:layout_marginRight="@dimen/app_10dp"
                 android:layout_weight="1"
@@ -180,7 +179,7 @@
                 android:layout_marginLeft="@dimen/app_10dp"
                 android:layout_marginRight="@dimen/app_10dp"
                 android:layout_width="@dimen/app_120dp"
-                android:layout_height="@dimen/app_145dp"
+                android:layout_height="@dimen/app_135dp"
                 android:background="@color/blue_4ea0e5"
                 android:scaleType="fitXY"/>
 
@@ -190,7 +189,7 @@
                 android:layout_marginLeft="@dimen/app_10dp"
                 android:layout_marginRight="@dimen/app_10dp"
                 android:layout_width="@dimen/app_120dp"
-                android:layout_height="@dimen/app_145dp"
+                android:layout_height="@dimen/app_135dp"
                 android:background="@color/blue_4ea0e5"
                 android:scaleType="fitXY"/>
 
