--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -23,7 +23,7 @@
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
+                android:layout_gravity="center_horizontal"
                 android:gravity="center"
                 android:orientation="horizontal">
 
@@ -40,7 +40,8 @@
                 <Button
                     android:id="@+id/btn_toolbar_search"
                     android:layout_width="@dimen/app_30dp"
-                    android:layout_height="@dimen/app_34dp"/>
+                    android:layout_height="@dimen/app_30dp"
+                    android:background="@drawable/icon_search"/>
 
             </LinearLayout>
         </android.support.v7.widget.Toolbar>
