--- a/app/src/main/res/layout/activity_video_player.xml
+++ b/app/src/main/res/layout/activity_video_player.xml
@@ -23,7 +23,8 @@
                 android:id="@+id/tv_player_activity_movie_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/app_10dp"
+                android:layout_marginLeft="@dimen/app_30dp"
+                android:layout_marginTop="@dimen/app_20dp"
                 android:text="标题:Notebook"
                 android:textSize="@dimen/app_font_size_20"
                 android:textStyle="bold"
@@ -31,11 +32,11 @@
 
             <ImageView
                 android:id="@+id/iv_player_video_like"
-                android:layout_width="@dimen/app_30dp"
-                android:layout_height="@dimen/app_30dp"
+                android:layout_width="@dimen/app_25dp"
+                android:layout_height="@dimen/app_25dp"
                 android:layout_alignParentRight="true"
-                android:layout_marginRight="@dimen/app_10dp"
-                android:background="@color/blue_E0F0FF"/>
+                android:layout_marginRight="@dimen/app_30dp"
+                android:layout_marginTop="@dimen/app_15dp"/>
 
             <TextView
                 android:layout_below="@+id/tv_player_activity_movie_name"
@@ -44,7 +45,7 @@
                 android:layout_height="wrap_content"
                 android:textStyle="bold"
                 android:textSize="@dimen/app_font_size_15"
-                android:layout_marginLeft="@dimen/app_10dp"
+                android:layout_marginLeft="@dimen/app_30dp"
                 android:text="年份:"/>
 
             <TextView
@@ -54,7 +55,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="@dimen/app_font_size_15"
-                android:layout_marginLeft="@dimen/app_50dp"
+                android:layout_marginLeft="@dimen/app_70dp"
                 android:text="xxxx年"/>
 
             <TextView
@@ -89,7 +90,7 @@
                 android:textSize="@dimen/app_font_size_15"
                 android:textStyle="bold"
                 android:layout_alignParentLeft="true"
-                android:layout_marginLeft="@dimen/app_10dp"
+                android:layout_marginLeft="@dimen/app_30dp"
                 android:text="主演："/>
 
             <TextView
@@ -100,7 +101,7 @@
                 android:layout_height="wrap_content"
                 android:textSize="@dimen/app_font_size_15"
                 android:layout_alignParentLeft="true"
-                android:layout_marginLeft="@dimen/app_50dp"
+                android:layout_marginLeft="@dimen/app_70dp"
                 android:text="瑞秋·麦克亚当斯，娜塔莉·波特曼"/>
 
             <TextView
@@ -111,7 +112,7 @@
                 android:textSize="@dimen/app_font_size_15"
                 android:layout_alignParentLeft="true"
                 android:textStyle="bold"
-                android:layout_marginLeft="@dimen/app_10dp"
+                android:layout_marginLeft="@dimen/app_30dp"
                 android:text="剧情简介："/>
 
             <TextView
@@ -119,8 +120,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/app_400dp"
                 android:textSize="@dimen/app_font_size_18"
-                android:layout_marginLeft="@dimen/app_10dp"
-                android:layout_marginRight="@dimen/app_10dp"
+                android:layout_marginLeft="@dimen/app_30dp"
+                android:layout_marginRight="@dimen/app_30dp"
                 android:layout_below="@id/tv_player_activity_movie_name"
                 android:layout_marginTop="@dimen/app_130dp"
                 android:text="哈哈哈哈哈哈哈哈哈哈哈哈哈\n哈哈哈哈/n哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈"/>
