--- a/app/src/main/res/layout/fragment_discover_page.xml
+++ b/app/src/main/res/layout/fragment_discover_page.xml
@@ -13,7 +13,7 @@
         android:scaleType="center"/>
 
     <RelativeLayout
-        android:id="@+id/rl_collection_entry_discover_page"
+        android:id="@+id/rl_collection_entry_collection_page"
         android:layout_below="@id/iv_header_discover_page"
         android:layout_width="match_parent"
         android:layout_height="@dimen/app_110dp"
@@ -26,7 +26,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="我的喜欢"
+            android:text="我的收藏"
             android:textSize="@dimen/app_font_size_24"
             android:layout_marginLeft="@dimen/app_25dp"
             android:layout_marginTop="@dimen/app_25dp" />
@@ -50,7 +50,7 @@
 
     <RelativeLayout
         android:id="@+id/rl_temp1_entry_discover_page"
-        android:layout_below="@id/rl_collection_entry_discover_page"
+        android:layout_below="@id/rl_collection_entry_collection_page"
         android:layout_width="match_parent"
         android:layout_height="@dimen/app_110dp"
         android:layout_marginLeft="@dimen/app_30dp"
