--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -36,7 +36,9 @@
     <color name="color_FCF2D9">#FCF2D9</color>
     <color name="color_FF5C70">#FF5C70</color>
     <color name="color_23FF97">#23FF97</color>
+    <color name="color_AAF7AB">#A5FFA7</color>
     <color name="color_4371FF">#4371FF</color>
+    <color name="color_9F4FC3F7">#9F4FC3F7</color>
     <color name="color_53FF9F">#53FF9F</color>
     <color name="color_B6B9C1">#B6B9C1</color>
     <color name="color_F1F8FC">#F1F8FC</color>
