--- a/app/src/main/res/drawable/round_corner_pale_green_5dp.xml
+++ b/app/src/main/res/drawable/round_corner_pale_green_5dp.xml
@@ -1,8 +1,9 @@
+<?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <!-- rectangle表示为矩形 -->
     <!-- 填充的颜色 -->
-    <solid android:color="@color/color_9F4FC3F7" />
+    <solid android:color="@color/color_AAF7AB" />
 
     <!-- 边框的颜色和粗细 -->
     <stroke
@@ -14,5 +15,4 @@
     <corners
         android:radius="@dimen/app_5dp"
         />
-
 </shape>
