--- a/app/src/main/res/layout/fragment_home_page.xml
+++ b/app/src/main/res/layout/fragment_home_page.xml
@@ -26,7 +26,7 @@
         android:layout_marginTop="@dimen/app_10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:tabTextColor="@color/colorPrimary"
+        app:tabTextColor="@color/color_36404A"
     />
 
     <android.support.v4.view.ViewPager
